--- a/amazon-textract-workshop/python/Textract.ipynb
+++ b/amazon-textract-workshop/python/Textract.ipynb
@@ -889,7 +889,8 @@
     "                    itemName = cell.text\n",
     "                elif(c == 4 and isFloat(cell.text)):\n",
     "                    value = float(cell.text)\n",
-    "                    if(value > 1000):\n",
+    "                    isSummaryRow = (r == len(table.rows) - 1)\n",
+    "                    if value > 1000 and not isSummaryRow:\n",
     "                        warning += \"{} is greater than $1000.\".format(itemName)\n",
     "if(warning):\n",
     "    print(\"\\nReview needed:\\n====================\\n\" + warning)"
